@@ -1095,17 +1095,18 @@ class CXmlImport18 {
 
 				if ($current_host && (!empty($rules['hosts']['updateExisting']) || !empty($rules['templates']['updateExisting']))) {
 					if ($host_db['status'] == HOST_STATUS_TEMPLATE) {
-						$host_db['templateid'] = $current_host['hostid'];
+						$host_db['templateid'] = $current_host['templateid'];
 						$result = API::Template()->update($host_db);
+						$current_hostid = $current_host['templateid'];
 					}
 					else {
 						$host_db['hostid'] = $current_host['hostid'];
 						$result = API::Host()->update($host_db);
+						$current_hostid = $current_host['hostid'];
 					}
 					if (!$result) {
 						throw new Exception();
 					}
-					$current_hostid = $current_host['hostid'];
 				}
 				if (!$current_host && (!empty($rules['hosts']['createMissing']) || !empty($rules['templates']['createMissing']))) {
 
@@ -1286,6 +1287,7 @@ class CXmlImport18 {
 
 						$item_applications = array();
 						$applications_to_add = array();
+						$applicationsIds = array();
 
 						foreach ($applications as $application) {
 							$application_db = array(
@@ -1298,9 +1300,19 @@ class CXmlImport18 {
 								'output' => API_OUTPUT_EXTEND
 							));
 
+							$applicationValue = reset($current_application);
 
 							if ($current_application) {
-								$item_applications = array_unique(array_merge($item_applications, $current_application));
+								if (empty($item_applications)) {
+									$item_applications = $current_application;
+									$applicationsIds[] = $applicationValue['applicationid'];
+								}
+								else {
+									if (!in_array($applicationValue['applicationid'], $applicationsIds)) {
+										$item_applications = array_merge($item_applications, $current_application);
+										$applicationsIds[] = $applicationValue['applicationid'];
+									}
+								}
 							}
 							else {
 								$applications_to_add[] = $application_db;
