@@ -63,6 +63,8 @@ A.F....... [ZBXNEXT-1447] added initial Finnish translation (Richlv)
 ........S. [ZBX-5525] renamed macro {TRIGGER.COMMENT} to {TRIGGER.DESCRIPTION} (Sasha)
 
 Bug fixes:
+..F....... [ZBX-5855] fixed "Array to string conversion" errors in 1.8 XML import (Oleg)
+..F....... [ZBX-3684] fixed "Undefined index" error in 1.8 XML import (Oleg)
 ...G...... [ZBX-5732] fixed sending data from a file in Zabbix sender (Andris)
 ...G...... [ZBX-5741] fixed Zabbix sender crash if a corrupted server response is received (Andris)
 ...G...... [ZBX-5722] fixed calculation of "vm.memory.size[available]" in Zabbix agent on Solaris (Andris)
